# Citibike-Sampler

./: .gitignore  README.md  pyproject.toml
citibike_sampler/: __init__.py  cli.py  config.py  download.py  downloader.py  global_paths.py  loader.py  misc.py  sampler.py  sampling.py
tests/: test_utils.py
tests/e2e/: test_real_data_fetch.py  test_real_loading_sampling.py
tests/integration/: test_s3_paths.py
tests/unit/: test_download_arguments.py  test_mock_data_extraction.py  test_mock_data_sampling.py  test_time.py  test_time_normalisation.py
