[project]
name = "citibike_sampler"
version = "0.0.1"
description = "Lightweight tool to download and sample trip-data from NYC's CitiBike network"
authors = [{name = "S. Langenbach"}]
dependencies = ["pandas", "tqdm", "requests", "pyarrow"]
requires-python = ">=3.9"

[project.scripts]
cbike = "citibike_utils.cli:main"

[tool.setuptools]
packages = ["citibike_sampler"]
include-package-data = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
    