[project]
name = "citibike-sampler"
version = "0.0.1"
description = "Python tool to download, ingest, and sample trip-data from NYC's Citi Bike network"
requires-python = ">=3.9"
license = "MIT License"
readme = "README.md"
authors = [
  { name="S. Langenbach", email="lungoruscello@gmail.com" }
]
dependencies = ["pandas", "tqdm", "requests", "pyarrow"]

[project.optional-dependencies]
build = [
    "twine>=4.0.2",
    "build",
    "wheel",
]

[project.scripts]
cbike = "citibike_sampler.cli:main"

[tool.setuptools]
packages = ["citibike_sampler"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Source = "https://github.com/lungoruscello/citibike_sampler"
    